# rusty-chess

./: Cargo.toml  LICENSE  README.md
.github/: dependabot.yaml
client/: Cargo.toml
client/src/: board.rs  connection.rs  error.rs  main.rs
server/: Cargo.toml
server/src/: connection.rs  error.rs  main.rs  state.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: chess.rs  errors.rs  games.rs  main.rs  players.rs
src/chess/: board.rs  mod.rs
src/chess/board/: piece.rs
src/rest/: users.rs
src/session/: mod.rs
