[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
env_logger = "0.10.0"
regex = "1.8.2"
dashmap = "5.4.0"