[package]
name = "rusty-chess"
version = "0.0.1"
edition = "2021"
authors = ["svitato91"]
license-file = "../LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
futures = { version = "0.3", features = ["executor"] }
thiserror = "1"
async-tungstenite = { version = "0.24", features = ["async-std-runtime"] }
shared = { path = "../shared" }
serde = { workspace = true, features = ["derive"] }
